# titanic_data_analyze

./: README.md  pyproject.toml  titanic_data.ipynb
data/: submission_result.csv
notebook/: Check_point.ipynb
