[project]
name = "data-analysis"
version = "0.1.0"
author = [
    {name = "Woo_Yong Seok", email = "todkdlel2021@naver.com"}

]
description = "타이타닉 데이터셋 분석 과제"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
requires-matplotlib = ">=3.9.2"
requires-pandas = ">= 2.2.3"
requires-scikit-learn = ">=1.5.2"